--- a/tokuten.html
+++ b/tokuten.html
@@ -159,7 +159,7 @@
     <h1>ワンマンライブ 特典計算</h1>
 
     <div class="input-area">
-        <h2>貢献度を入力</h2>
+        <h2>数字を入力</h2>
         <p style="text-align: center; margin-top: 0; margin-bottom: 20px;">
             チェキ：500円/枚、 動員：2,500円/人 として計算します。
         </p>
