--- a/tokuten.html
+++ b/tokuten.html
@@ -238,7 +238,7 @@
                     <td>私物プレゼント</td>
                 </tr>
                 <tr>
-                    <td>カラオケオフ会</td>
+                    <td>カラオケオフ会(1時間)</td>
                 </tr>
                 <tr>
                     <td>プリ同行</td>
